# qusi_evaluation

./: .gitignore  pyproject.toml
scripts/: check_transit_dataset.py  download_transit_data.py  generate_transit_data_metadata_files.py  infer_microlensing.py  infer_rich_dataset.py  infer_variable.py  prepare_moa_microlensing_dataset.py  refine_transit_file_structure.py  slurm_multi_node_run.sh  slurm_single_node_infer.sh  slurm_single_node_run.sh  train_microlensing.py  train_moa_microlensing.py  train_rich_dataset.py  train_slb.py  train_transit.py  train_transit1.py  train_transit_overfit.py  train_variable_team_simulations_dataset.py  upload_transit_dataset_to_hugging_face.py  visualize_rich_dataset_light_curve_collection.py
src/qusi_evaluation/: download_plasticc_dataset.py  download_spoc_sector_27_to_56_light_curve_data.py  microlensing_dataset.py  moa_microlensing_dataset.py  rich_microlensing_dataset.py  slb_dataset.py  transit_dataset.py  transit_overfit_dataset.py  variable_team_simulations_dataset.py
src/qusi_evaluation/internal/: moa_microlensing_dataset_preparation.py
