[project]
name = "qusi_evaluation"
dynamic = ["version"]
description = ""
authors = [
    { name = "Greg Olmschenk", email = "greg@olmschenk.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "qusi>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/qusi_evaluation/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/qusi_evaluation tests}"

[tool.coverage.run]
source_pkgs = ["qusi_evaluation", "tests"]
branch = true
parallel = true
omit = [
    "src/qusi_evaluation/__about__.py",
]

[tool.coverage.paths]
qusi_evaluation = ["src/qusi_evaluation", "*/qusi_evaluation/src/qusi_evaluation"]
tests = ["tests", "*/qusi_evaluation/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
